// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<button
  aria-busy="false"
  aria-controls="popover"
  aria-expanded="false"
  aria-haspopup="dialog"
  class="components-flex wp-components-flex components-base-button wp-components-base-button components-button wp-components-button css-3mp8cw"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
  type="button"
>
  <span
    class="components-flex-item wp-components-flex-item css-19mrak6"
    data-g2-c16t="true"
    data-g2-component="ButtonContent"
  >
    Show Yourself
  </span>
  <span
    class="components-elevation wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render gutter 1`] = `
<button
  aria-busy="false"
  aria-controls="popover"
  aria-expanded="true"
  aria-haspopup="dialog"
  class="components-flex wp-components-flex components-base-button wp-components-base-button components-button wp-components-button css-3mp8cw"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
  type="button"
>
  <span
    class="components-flex-item wp-components-flex-item css-19mrak6"
    data-g2-c16t="true"
    data-g2-component="ButtonContent"
  >
    Show Yourself
  </span>
  <span
    class="components-elevation wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render label 1`] = `
<button
  aria-busy="false"
  aria-controls="popover"
  aria-expanded="true"
  aria-haspopup="dialog"
  class="components-flex wp-components-flex components-base-button wp-components-base-button components-button wp-components-button css-3mp8cw"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
  type="button"
>
  <span
    class="components-flex-item wp-components-flex-item css-19mrak6"
    data-g2-c16t="true"
    data-g2-component="ButtonContent"
  >
    Show Yourself
  </span>
  <span
    class="components-elevation wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render maxWidth 1`] = `
<button
  aria-busy="false"
  aria-controls="popover"
  aria-expanded="true"
  aria-haspopup="dialog"
  class="components-flex wp-components-flex components-base-button wp-components-base-button components-button wp-components-button css-3mp8cw"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
  type="button"
>
  <span
    class="components-flex-item wp-components-flex-item css-19mrak6"
    data-g2-c16t="true"
    data-g2-component="ButtonContent"
  >
    Show Yourself
  </span>
  <span
    class="components-elevation wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render placement 1`] = `
<button
  aria-busy="false"
  aria-controls="popover"
  aria-expanded="true"
  aria-haspopup="dialog"
  class="components-flex wp-components-flex components-base-button wp-components-base-button components-button wp-components-button css-3mp8cw"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
  type="button"
>
  <span
    class="components-flex-item wp-components-flex-item css-19mrak6"
    data-g2-c16t="true"
    data-g2-component="ButtonContent"
  >
    Show Yourself
  </span>
  <span
    class="components-elevation wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render visible 1`] = `
<button
  aria-busy="false"
  aria-controls="popover"
  aria-expanded="true"
  aria-haspopup="dialog"
  class="components-flex wp-components-flex components-base-button wp-components-base-button components-button wp-components-button css-3mp8cw"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
  type="button"
>
  <span
    class="components-flex-item wp-components-flex-item css-19mrak6"
    data-g2-c16t="true"
    data-g2-component="ButtonContent"
  >
    Show Yourself
  </span>
  <span
    class="components-elevation wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render without animation 1`] = `
<button
  aria-busy="false"
  aria-controls="popover"
  aria-expanded="true"
  aria-haspopup="dialog"
  class="components-flex wp-components-flex components-base-button wp-components-base-button components-button wp-components-button css-3mp8cw"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
  type="button"
>
  <span
    class="components-flex-item wp-components-flex-item css-19mrak6"
    data-g2-c16t="true"
    data-g2-component="ButtonContent"
  >
    Show Yourself
  </span>
  <span
    class="components-elevation wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render without content 1`] = `
<button
  aria-busy="false"
  aria-controls="popover"
  aria-expanded="true"
  aria-haspopup="dialog"
  class="components-flex wp-components-flex components-base-button wp-components-base-button components-button wp-components-button css-3mp8cw"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
  type="button"
>
  <span
    class="components-flex-item wp-components-flex-item css-19mrak6"
    data-g2-c16t="true"
    data-g2-component="ButtonContent"
  >
    Show Yourself
  </span>
  <span
    class="components-elevation wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render without modal 1`] = `
<button
  aria-busy="false"
  aria-controls="popover"
  aria-expanded="true"
  aria-haspopup="dialog"
  class="components-flex wp-components-flex components-base-button wp-components-base-button components-button wp-components-button css-3mp8cw"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
  type="button"
>
  <span
    class="components-flex-item wp-components-flex-item css-19mrak6"
    data-g2-c16t="true"
    data-g2-component="ButtonContent"
  >
    Show Yourself
  </span>
  <span
    class="components-elevation wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render without trigger 1`] = `null`;
